Updated subpath with new changes

--- a/dog-killed-after-eating-1.5-million-btc-seed-phrase-man-arrested/index.html
+++ b/dog-killed-after-eating-1.5-million-btc-seed-phrase-man-arrested/index.html
@@ -3,7 +3,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
 	<link rel="profile" href="https://gmpg.org/xfn/11">
-	<title>Philadelphia Man Purchases Dog 'Pookie' With Cryptocurrency</title>
+	<title>Man Arrested After Killing Greyhound Over $1.5 Million Bitcoin Seed Phrase</title>
 <meta name="robots" content="max-image-preview:large">
 <link rel="dns-prefetch" href="//ak.sail-horizon.com">
 <link rel="dns-prefetch" href="//cdn.parsely.com">
